--- a/style.css
+++ b/style.css
@@ -8,3 +8,14 @@
     border:2px solid black;
 }
 
+#infoscreen{
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%); /*same as self.width/2*/
+    box-shadow: 0px 0px 5px 16px rgba(0,0,0,0.59);
+    content:"just a test"
+}
+
+
+
