--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 #infoscreen{
     display:none;
     position: absolute;
+    background-color: #ccc;
     top:50%;
     left:50%;
     width:400px;
