--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    overflow:hidden;
+}
+
 #canvas1{
     position: absolute;
     top: 50%;
@@ -6,6 +10,8 @@
     /*width:600px;
     height:400px;*/
     border:2px solid black;
+    width:100%;
+    height:100%;
 }
 
 #infoscreen{
@@ -18,6 +24,7 @@
     height:300px;
     transform: translate(-50%,-50%); /*same as self.width/2*/
     box-shadow: 0px 0px 5px 16px rgba(0,0,0,0.59);
+    border-radius:10px;
     z-index: 2000;
    
 }
