--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body{
     overflow:hidden;
 }
 
+button{
+    padding:10px;
+}
 #canvas1{
     position: absolute;
     top: 50%;
@@ -32,9 +35,12 @@ body{
 .infoscreen.open{
     display:flex;
     margin:auto;
-    flex-direction: row;
+    flex-direction: column;
     justify-items: center;
     align-items: center;
+    font-size:20px;
+    font-weight:800;
+    text-align:center;
 }
 
 
